Refactoring; guard against race conditions with NonceMonitor

--- a/packages/metatransaction-broadcaster/package.json
+++ b/packages/metatransaction-broadcaster/package.json
@@ -12,10 +12,12 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.14.7",
     "@babel/register": "^7.14.5",
+    "@ethersproject/experimental": "^5.6.3",
     "body-parser": "^1.19.0",
     "discord.js": "^12.5.3",
     "ethers": "^5.4.1",
     "express": "^4.17.1",
+    "express-queue": "^0.0.13",
     "jsonfile": "^6.1.0",
     "request-promise": "^4.2.6",
     "slack": "^11.0.2",
