--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -282,6 +282,9 @@ jobs:
       - checkout
       - <<: *step_restore_cache
       - run:
+          name: "Update npm"
+          command: sudo npm i -g npm
+      - run:
           name: "Install packages"
           command: npm ci
       - attach_workspace:
