--- a/package.json
+++ b/package.json
@@ -76,8 +76,8 @@
   "devDependencies": {
     "@codechecks/client": "^0.1.12",
     "@colony/eslint-config-colony": "9.0.2",
-    "@umaprotocol/truffle-ledger-provider": "^1.0.5",
     "@solidity-parser/parser": "^0.14.2",
+    "@umaprotocol/truffle-ledger-provider": "^1.0.5",
     "async-request": "^1.2.0",
     "axios": "^0.27.2",
     "bignumber.js": "^9.0.2",
@@ -102,7 +102,7 @@
     "ganache": "^7.3.0",
     "husky": "^8.0.1",
     "istanbul": "^0.4.5",
-    "istanbul-combine": "^0.3.0",
+    "istanbul-combine": "github:area/istanbul-combine",
     "mocha": "^10.0.0",
     "mocha-circleci-reporter": "^0.0.3",
     "node-hid": "^2.1.1",
