--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -283,7 +283,7 @@ jobs:
       - <<: *step_restore_cache
       - run:
           name: "Update npm"
-          command: sudo npm i -g npm
+          command: sudo npm install -g npm@8.5.5
       - run:
           name: "Install packages"
           command: npm ci
