Specify (larger than default) resource class for Circle

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ job_common: &job_common
         username: colonyci
         password: $COLONYCI_DOCKERHUB_PASSWORD
   working_directory: ~/colonyNetwork
+  resource_class: large
   run: 
 job_python: &job_python
   docker:
