First commit, to be squashed

--- a/package.json
+++ b/package.json
@@ -136,7 +136,7 @@
     "solhint": "^3.3.7",
     "solidity-coverage": "^0.8.7",
     "solidity-steamroller": "^1.1.0",
-    "truffle": "^5.5.30",
+    "truffle": "5.5.30",
     "truffle-contract-size": "^2.0.1",
     "truffle-hdwallet-provider": "^1.0.17",
     "web3-utils": "^1.7.3"
