--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,7 +68,18 @@ jobs:
             sudo apt-get install lsof
       - run:
           name: "Running reputation system unit tests"
-          command: npm run test:reputation
+          command: npm run test:reputation:1
+          environment:
+            NODE_OPTIONS: --max-old-space-size=6144
+      - run:
+          name: "Reset chains"
+          command: |
+            sudo apt-get update
+            sudo apt-get install lsof
+            npm run stop:blockchain:client && rm -rf ganache-chain-db*
+      - run:
+          name: "Running reputation system unit tests"
+          command: npm run test:reputation:2
           environment:
             NODE_OPTIONS: --max-old-space-size=6144
       - run:
