--- a/packages/reputation-miner/Dockerfile
+++ b/packages/reputation-miner/Dockerfile
@@ -4,4 +4,4 @@ COPY ./package.json ./
 COPY ./package-lock.json ./
 RUN npm ci
 EXPOSE 3000
-CMD node $NODE_ARGS packages/reputation-miner/bin/index.js --dbPath $REPUTATION_JSON_PATH --colonyNetworkAddress $COLONYNETWORK_ADDRESS --privateKey $PRIVATE_KEY --syncFrom $SYNC_FROM_BLOCK $ARGS
+CMD node $NODE_ARGS packages/reputation-miner/bin/index.js
