--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
   "devDependencies": {
     "@codechecks/client": "^0.1.12",
     "@colony/eslint-config-colony": "9.0.2",
+    "@nomicfoundation/hardhat-ethers": "^3.0.5",
     "@nomiclabs/hardhat-truffle5": "^2.0.7",
     "@openzeppelin/contracts": "^4.9.3",
     "@solidity-parser/parser": "^0.14.2",
@@ -110,7 +111,7 @@
     "eth-sig-util": "^3.0.1",
     "ethereumjs-account": "^3.0.0",
     "ethereumjs-util": "^7.1.5",
-    "ethers": "^5.6.8",
+    "ethers": "^6.9.0",
     "ethlint": "^1.2.5",
     "find-in-files": "^0.5.0",
     "ganache": "7.5",
