Update package.json scripts

--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "provision:token:contracts": "truffle compile && truffle compile --contracts_directory 'lib/dappsys/[!note][!stop][!proxy][!thing][!token]*.sol' && bash ./scripts/provision-token-contracts.sh",
     "provision:safe:contracts": "truffle compile && truffle compile --contracts_directory 'lib/safe-contracts/contracts/proxies/*.sol' && truffle compile --contracts_directory 'lib/safe-contracts/contracts/*.sol' && bash ./scripts/provision-safe-contracts.sh",
     "start:bridging": "cd ./lib/safe-contracts && npm i || true && cd ../../ && bash ./scripts/setup-foreign-chain.sh && node ./scripts/setup-bridging-contracts.js &",
-    "start:blockchain:client": "bash ./scripts/start-blockchain-client.sh",
-    "start:blockchain:client:2": "CHAIN_ID=2656692 PORT=8546 DBPATH=./ganache-chain-db-2 bash ./scripts/start-blockchain-client.sh",
+    "start:blockchain:client": "npx hardhat node 1> /dev/null 2> /dev/null",
+    "start:blockchain:client:2": "CHAIN_ID=2656692 PORT=8546 DBPATH=./ganache-chain-db-2 npx hardhat node",
     "start:reputation:oracle": "./scripts/start-reputation-oracle.js",
-    "reset:blockchain:client": "npm run stop:blockchain:client && rm -rf ./ganache-chain-db*",
+    "reset:blockchain:client": "rm -rf ./ganache-chain-db*",
     "stop:blockchain:client": "bash ./scripts/stop-blockchain-client.sh",
     "fork:goerli": "ganache --fork https://goerli.infura.io/v3/e21146aa267845a2b7b4da025178196d --port 8605",
     "fork:mainnet": "ganache --fork https://mainnet.infura.io/v3/e21146aa267845a2b7b4da025178196d --port 8601",
@@ -35,9 +35,9 @@
     "test:reputation:1": "npm run start:blockchain:client & truffle migrate --reset --compile-all && nyc truffle test ./test/reputation-system/* --network development",
     "test:reputation:2": "npm run start:blockchain:client hardhat & truffle migrate --reset --compile-all && nyc truffle test ./test/reputation-system/reputation-mining-client/* --network development",
     "test:reputation:coverage": "SOLIDITY_COVERAGE=1 truffle run coverage --solcoverjs ./.solcover.reputation.js --network coverage --temp build-coverage --file='./test/reputation-system/**/*'",
-    "test:contracts": "npm run start:blockchain:client & truffle migrate --reset --compile-all && truffle test ./test/contracts-network/* ./test/packages/* --network development",
-    "test:contracts:bridging:1": "npm run start:blockchain:client hardhat & npm run wait:port 8545 && npm run start:blockchain:client:2 hardhat & npm run wait:port 8546 && TRUFFLE_FOREIGN=false npx hardhat test ./test/cross-chain/* --network localhost",
-    "test:contracts:bridging:2": "npm run start:blockchain:client hardhat & npm run wait:port 8545 && npm run start:blockchain:client:2 hardhat & npm run wait:port 8546 && TRUFFLE_FOREIGN=true npx hardhat test ./test/cross-chain/* --network localhost",
+    "test:contracts": "npm run start:blockchain:client & sleep 1 && npx hardhat test ./test/contracts-network/* ./test/packages/* --network development",
+    "test:contracts:bridging:1": "npm run start:blockchain:client hardhat & npm run wait:port 8545 && npm run start:blockchain:client:2 hardhat & npm run wait:port 8546 && TRUFFLE_FOREIGN=false npx hardhat test ./test/cross-chain/* --network development",
+    "test:contracts:bridging:2": "npm run start:blockchain:client hardhat & npm run wait:port 8545 && npm run start:blockchain:client:2 hardhat & npm run wait:port 8546 && TRUFFLE_FOREIGN=true npx hardhat test ./test/cross-chain/* --network development",
     "test:contracts:bridging:1:coverage": "npm run start:blockchain:client & npm run start:blockchain:client:2 & SOLIDITY_COVERAGE=1 TRUFFLE_FOREIGN=false truffle run coverage --solcoverjs ./.solcover.crosschain.js --network coverage --temp build-coverage --file='./test/cross-chain/**/*'",
     "test:contracts:bridging:2:coverage": "npm run start:blockchain:client & npm run start:blockchain:client:2 & SOLIDITY_COVERAGE=1 TRUFFLE_FOREIGN=true truffle run coverage --solcoverjs ./.solcover.crosschain.js --network coverage --temp build-coverage --file='./test/cross-chain/**/*'",
     "test:contracts:extensions": "npm run start:blockchain:client & truffle migrate --reset --compile-all && truffle test ./test/extensions/* --network development",
