--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "clean:contracts": "rimraf ./build/contracts/*",
     "clean:ganache": "rimraf ./ganache-chain-db/",
     "provision:token:contracts": "truffle compile && truffle compile --contracts_directory 'lib/dappsys/[!note][!stop][!proxy][!thing][!token]*.sol' && bash ./scripts/provision-token-contracts.sh",
-    "provision:safe:contracts": "npx hardhat compile && npx hardhat compile lib/safe-contracts/contracts/proxies/*.sol && npx hardhat compile lib/safe-contracts/contracts/*.sol && bash ./scripts/provision-safe-contracts.sh",
+    "provision:safe:contracts": "truffle compile && truffle compile --contracts_directory 'lib/safe-contracts/contracts/proxies/*.sol' && truffle compile --contracts_directory 'lib/safe-contracts/contracts/*.sol' && bash ./scripts/provision-safe-contracts.sh",
     "start:bridging": "cd ./lib/safe-contracts && npm i || true && cd ../../ && bash ./scripts/setup-foreign-chain.sh && node ./scripts/setup-bridging-contracts.js &",
     "start:blockchain:client": "bash ./scripts/start-blockchain-client.sh",
     "start:blockchain:client:2": "CHAIN_ID=2656692 PORT=8546 DBPATH=./ganache-chain-db-2 bash ./scripts/start-blockchain-client.sh",
@@ -49,8 +49,8 @@
     "test:contracts:upgrade:coverage": "npm run generate:test:contracts && SOLIDITY_COVERAGE=1 truffle run coverage --solcoverjs ./.solcover.upgrade.js --network coverage --temp build-coverage --file='./test-upgrade/*'",
     "test:contracts:gasCosts": "npm run start:blockchain:client && npx hardhat test test-gas-costs/gasCosts.js --network development",
     "test:contracts:patricia": "npm run start:blockchain:client parity && npx hardhat test packages/reputation-miner/patricia-test.js --network development",
-    "test:contracts:coverage": "SOLIDITY_COVERAGE=1 truffle run coverage --network coverage --temp build-coverage --file='./test/contracts-network/*'",
-    "test:contracts:extensions:coverage": "SOLIDITY_COVERAGE=1 truffle run coverage --network coverage --solcoverjs ./.solcover.extensions.js --temp build-coverage --file='./test/extensions/*'",
+    "test:contracts:coverage": "npx hardhat compile && SOLIDITY_COVERAGE=1 truffle run coverage --network coverage --temp build-coverage --file='./test/contracts-network/*'",
+    "test:contracts:extensions:coverage": "SOLIDITY_COVERAGE=1 NODE_OPTIONS='--max-old-space-size=6144' truffle run coverage --network coverage --solcoverjs ./.solcover.extensions.js --temp build-coverage --file='./test/extensions/*'",
     "test:contracts:watch": "npm run start:blockchain:client && truffle watch --network development",
     "test:contracts:e2e": "npm run start:blockchain:client && npx hardhat test test-system/end-to-end.js --network development",
     "test:contracts:smoke": "truffle compile && npx hardhat test ./test-smoke/colony-storage-consistent.js --network storageSmoke",
