--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "@codechecks/client": "^0.1.12",
     "@colony/eslint-config-colony": "9.0.2",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.10",
+    "@nomicfoundation/hardhat-verify": "^2.0.4",
     "@nomiclabs/hardhat-truffle5": "^2.0.7",
     "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/contracts": "^4.9.3",
