--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "test:contracts:upgrade:ganache": "npm run start:blockchain:client ganache & npm run generate:test:contracts && npx hardhat test ./test-upgrade/* --network development",
     "test:contracts:upgrade:coverage": "npm run generate:test:contracts && SOLIDITY_COVERAGE=1 npx hardhat coverage --solcoverjs ./.solcover.upgrade.js --temp build-coverage --testfiles './test-upgrade/*'",
     "test:contracts:gasCosts": "npm run start:blockchain:client && npx hardhat test test-gas-costs/gasCosts.js --network development",
-    "test:contracts:patricia": "npm run start:blockchain:client parity && npx hardhat test packages/reputation-miner/patricia-test.js --network development",
+    "test:contracts:patricia": "npm run start:blockchain:client parity & npx hardhat test packages/reputation-miner/patricia-test.js --network integration",
     "test:contracts:coverage": "SOLIDITY_COVERAGE=1 npx hardhat coverage --temp build-coverage --testfiles './test/contracts-network/*'",
     "test:contracts:extensions:coverage": "npx hardhat compile && SOLIDITY_COVERAGE=1 NODE_OPTIONS='--max-old-space-size=6144' npx hardhat coverage --solcoverjs ./.solcover.extensions.js --temp build-coverage --testfiles './test/extensions/*'",
     "test:contracts:watch": "npm run start:blockchain:client && truffle watch --network development",
