Fix docker version on CircleCI for all jobs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ jobs:
       - checkout
       - <<: *step_restore_cache
       - setup_remote_docker:
-          version: 19.03.13
+          version: docker23
       - <<: *step_pull_solc_docker
       - <<: *step_setup_global_packages
       - run:
@@ -89,7 +89,7 @@ jobs:
       - checkout
       - <<: *step_restore_cache
       - setup_remote_docker:
-          version: 19.03.13
+          version: docker23
       - <<: *step_pull_solc_docker
       - <<: *step_setup_global_packages
       - run:
@@ -125,7 +125,7 @@ jobs:
       - checkout
       - <<: *step_restore_cache
       - setup_remote_docker:
-          version: 19.03.13
+          version: docker23
       - <<: *step_pull_solc_docker
       - <<: *step_setup_global_packages
       - run:
@@ -152,7 +152,7 @@ jobs:
       - checkout
       - <<: *step_restore_cache
       - setup_remote_docker:
-          version: 19.03.13
+          version: docker23
       - <<: *step_pull_solc_docker
       - <<: *step_setup_global_packages
       - run:
@@ -179,7 +179,7 @@ jobs:
       - checkout
       - <<: *step_restore_cache
       - setup_remote_docker:
-          version: 19.03.13
+          version: docker23
       - <<: *step_pull_solc_docker
       - <<: *step_setup_global_packages
       - run:
@@ -240,7 +240,7 @@ jobs:
       - checkout
       - <<: *step_restore_cache
       - setup_remote_docker:
-          version: 19.03.13
+          version: docker23
       - <<: *step_pull_solc_docker
       - <<: *step_setup_global_packages
       - run:
@@ -258,7 +258,7 @@ jobs:
       - checkout
       - <<: *step_restore_cache
       - setup_remote_docker:
-          version: 19.03.13
+          version: docker23
       - <<: *step_pull_solc_docker
       - <<: *step_setup_global_packages
       - run:
@@ -276,7 +276,7 @@ jobs:
       - checkout
       - <<: *step_restore_cache
       - setup_remote_docker:
-          version: 19.03.13
+          version: docker23
       - <<: *step_pull_solc_docker
       - <<: *step_setup_global_packages
       - run:
@@ -294,7 +294,7 @@ jobs:
       - checkout
       - <<: *step_restore_cache
       - setup_remote_docker:
-          version: 19.03.13
+          version: docker23
       - <<: *step_pull_solc_docker
       - <<: *step_setup_global_packages
       - run:
@@ -312,7 +312,7 @@ jobs:
       - checkout
       - <<: *step_restore_cache
       - setup_remote_docker:
-          version: 19.03.13
+          version: docker23
       - <<: *step_pull_solc_docker
       - <<: *step_setup_global_packages
       - run:
@@ -348,7 +348,7 @@ jobs:
       - checkout
       - <<: *step_restore_cache
       - setup_remote_docker:
-          version: 19.03.13
+          version: docker23
       - <<: *step_pull_solc_docker
       - <<: *step_setup_global_packages
       - run:
@@ -399,7 +399,7 @@ jobs:
       - checkout
       - <<: *step_restore_cache
       - setup_remote_docker:
-          version: 19.03.13
+          version: docker23
       - <<: *step_pull_solc_docker
       - <<: *step_setup_global_packages
       - <<: *step_setup_slither
@@ -414,7 +414,7 @@ jobs:
       - checkout
       - <<: *step_restore_cache
       - setup_remote_docker:
-          version: 19.03.13
+          version: docker23
       - <<: *step_pull_solc_docker
       - <<: *step_setup_global_packages
       - run:
