--- a/package.json
+++ b/package.json
@@ -111,7 +111,7 @@
     "express": "^4.18.2",
     "find-in-files": "^0.5.0",
     "ganache": "7.5",
-    "hardhat": "~2.19.5",
+    "hardhat": "^2.19.5",
     "hardhat-contract-sizer": "^2.10.0",
     "husky": "^8.0.1",
     "istanbul": "^0.4.5",
