--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "test:security:slither": "slither . --solc-disable-warnings --exclude-low --exclude-informational --exclude-optimization --filter-paths 'lib|contracts/testHelpers|@openzeppelin'",
     "pretest:contracts": "npm run stop:blockchain:client",
     "posttest:contracts": "npm run stop:blockchain:client",
+    "pretest:contracts:extensions": "npm run stop:blockchain:client",
     "posttest:contracts:extensions": "npm run stop:blockchain:client",
     "posttest:contracts:upgrade:parity": "npm run clean:test:contracts | npm run stop:blockchain:client",
     "posttest:contracts:upgrade:ganache": "npm run clean:test:contracts | npm run stop:blockchain:client",
@@ -115,7 +116,7 @@
     "express": "^4.18.2",
     "find-in-files": "^0.5.0",
     "ganache": "7.9.2",
-    "hardhat": "~2.19.5",
+    "hardhat": "^2.22.3",
     "hardhat-contract-sizer": "^2.10.0",
     "husky": "^8.0.1",
     "istanbul": "^0.4.5",
