Upgrade to hardhat 2.22

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -372,6 +372,7 @@ jobs:
             - coverage-chainid-100
             - coverage-chainid-777
   coverage-test-bridging:
+    resource_class: large
     <<: *job_common
     steps:
       - checkout
