--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -371,8 +371,7 @@ jobs:
             - coverage-chainid-5
             - coverage-chainid-100
             - coverage-chainid-777
-  coverage-test-bridging:
-    resource_class: large
+  coverage-test-bridging-1:
     <<: *job_common
     steps:
       - checkout
@@ -389,12 +388,22 @@ jobs:
           command: npm run test:contracts:bridging:1:coverage
           environment:
             NODE_OPTIONS: --max-old-space-size=6144
+      - persist_to_workspace:
+          root: ./
+          paths:
+            - coverage-cross-chain-home
+  coverage-test-bridging-2:
+    <<: *job_common
+    steps:
+      - checkout
+      - <<: *step_restore_cache
+      - setup_remote_docker:
+          version: docker23
+      - <<: *step_pull_solc_docker
+      - <<: *step_setup_global_packages
       - run:
-          name: "Reset chains"
-          command: |
-            sudo apt-get update
-            sudo apt-get install lsof
-            npm run stop:blockchain:client && rm -rf ganache-chain-db*
+          name: "Installing the safe-contracts dependencies"
+          command: cd ./lib/safe-contracts && npm i --ignore-scripts
       - run:
           name: "Running coverage tests for foreign-side of bridge"
           command: npm run test:contracts:bridging:2:coverage
@@ -404,7 +413,6 @@ jobs:
           root: ./
           paths:
             - coverage-cross-chain-foreign
-            - coverage-cross-chain-home
   reputation-test-non-gnosis:
     <<: *job_common
     steps:
@@ -514,7 +522,9 @@ workflows:
           context: dockerhub-credentials
       - coverage-test-upgrade:
           context: dockerhub-credentials
-      - coverage-test-bridging:
+      - coverage-test-bridging-1:
+          context: dockerhub-credentials
+      - coverage-test-bridging-2:
           context: dockerhub-credentials
       - reputation-test-non-gnosis:
           context: dockerhub-credentials
@@ -526,7 +536,8 @@ workflows:
             - coverage-test-reputation
             - coverage-test-chainid
             - coverage-test-upgrade
-            - coverage-test-bridging
+            - coverage-test-bridging-1
+            - coverage-test-bridging-2
  # nightly:
  #   triggers:
  #     - schedule:
