--- a/package.json
+++ b/package.json
@@ -165,5 +165,14 @@
     "packages/metatransaction-broadcaster",
     "packages/package-utils",
     "packages/reputation-miner"
-  ]
+  ],
+  "dependencies": {
+    "@certusone/wormhole-sdk": "^0.10.15",
+    "@grpc/grpc-js": "^1.10.8",
+    "@grpc/proto-loader": "^0.7.13",
+    "@nomicfoundation/hardhat-ethers": "^3.0.5",
+    "@types/node": "^20.11.0",
+    "express-ws": "^5.0.2",
+    "ws": "^8.17.0"
+  }
 }
