--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "start:bridging": "cd ./lib/safe-contracts && pnpm i || true && cd ../../ && bash ./scripts/setup-foreign-chain.sh && node ./scripts/setup-bridging-contracts.js &",
     "start:blockchain:client": "bash ./scripts/start-blockchain-client.sh",
     "start:blockchain:client:2": "PORT=8546 bash ./scripts/start-blockchain-client.sh",
-    "start:blockchain:client:both": "CHAIN_ID=$CHAIN_ID_1 pnpm run start:blockchain:client & sleep 1 && CHAIN_ID=$CHAIN_ID_2 pnpm run start:blockchain:client:2",
+    "start:blockchain:client:both": "CHAIN_ID=$CHAIN_ID_1 pnpm run start:blockchain:client && sleep 1 && CHAIN_ID=$CHAIN_ID_2 pnpm run start:blockchain:client:2",
     "start:reputation:oracle": "./scripts/start-reputation-oracle.js",
     "reset:blockchain:client": "pnpm run stop:blockchain:client",
     "stop:blockchain:client": "bash ./scripts/stop-blockchain-client.sh",
@@ -41,7 +41,8 @@
     "test:reputation:2": "pnpm run start:blockchain:client && npx hardhat test ./test/reputation-system/reputation-mining-client/* --network development",
     "test:reputation:1:anotherChain": "CHAIN_ID=101010101 pnpm run start:blockchain:client && MINING_CHAIN_ID=101010101 CHAIN_ID=101010101 npx hardhat test ./test/reputation-system/*.js --network development",
     "test:reputation:2:anotherChain": "CHAIN_ID=101010101 pnpm run start:blockchain:client && MINING_CHAIN_ID=101010101 CHAIN_ID=101010101 npx hardhat test ./test/reputation-system/reputation-mining-client/* --network development",
-    "test:reputation:coverage": "npx hardhat coverage --solcoverjs ./.solcover.reputation.js --temp build-coverage --testfiles './test/reputation-system/**/*'",
+    "test:reputation:1:coverage": "npx hardhat coverage --solcoverjs ./.solcover.reputation.1.js --temp build-coverage --testfiles './test/reputation-system/*.js'",
+    "test:reputation:2:coverage": "npx hardhat coverage --solcoverjs ./.solcover.reputation.2.js --temp build-coverage --testfiles './test/reputation-system/reputation-mining-client/*'",
     "test:reputation:1:anotherChain:coverage": "MINING_CHAIN_ID=101010101 CHAIN_ID=101010101 npx hardhat coverage --solcoverjs ./.solcover.anotherChain1.js --testfiles './test/reputation-system/*.js'",
     "test:reputation:2:anotherChain:coverage": "MINING_CHAIN_ID=101010101 CHAIN_ID=101010101 npx hardhat coverage --solcoverjs ./.solcover.anotherChain2.js --testfiles './test/reputation-system/reputation-mining-client/*'",
     "test:contracts": "pnpm run start:blockchain:client && npx hardhat test ./test/contracts-network/* ./test/packages/* --network development",
@@ -52,25 +53,25 @@
     "test:contracts:extensions": "pnpm run start:blockchain:client && npx hardhat test ./test/extensions/* --network development",
     "test:contracts:chainid": "pnpm run stop:blockchain:client && pnpm run start:blockchain:client && npx hardhat test ./test-chainid/*",
     "test:contracts:chainid:coverage": "npx hardhat coverage --solcoverjs ./.solcover.chainid.js --temp build-coverage --testfiles './test-chainid/**/*'",
-    "test:contracts:upgrade:parity": "pnpm run run start:blockchain:client parity & pnpm run generate:test:contracts && npx hardhat test ./test-upgrade/* --network integration",
-    "test:contracts:upgrade:hardhat": "pnpm run run start:blockchain:client & pnpm run generate:test:contracts && npx hardhat test ./test-upgrade/* --network development",
-    "test:contracts:upgrade:coverage": "pnpm run run generate:test:contracts && npx hardhat coverage --solcoverjs ./.solcover.upgrade.js --temp build-coverage --testfiles './test-upgrade/*'",
-    "test:contracts:gasCosts": "pnpm run run start:blockchain:client && npx hardhat test test-gas-costs/gasCosts.js --network development",
-    "test:contracts:patricia": "pnpm run run start:blockchain:client & npx hardhat test packages/reputation-miner/patricia-test.js --network development",
+    "test:contracts:upgrade:parity": "pnpm run start:blockchain:client parity & pnpm run generate:test:contracts && npx hardhat test ./test-upgrade/* --network integration",
+    "test:contracts:upgrade:hardhat": "pnpm run start:blockchain:client && pnpm run generate:test:contracts && npx hardhat test ./test-upgrade/* --network development",
+    "test:contracts:upgrade:coverage": "pnpm run generate:test:contracts && npx hardhat coverage --solcoverjs ./.solcover.upgrade.js --temp build-coverage --testfiles './test-upgrade/*'",
+    "test:contracts:gasCosts": "pnpm run start:blockchain:client && npx hardhat test test-gas-costs/gasCosts.js --network development",
+    "test:contracts:patricia": "pnpm run start:blockchain:client && npx hardhat test packages/reputation-miner/patricia-test.js --network development",
     "test:contracts:coverage": "npx hardhat coverage --temp build-coverage --testfiles './test/contracts-network/*'",
     "test:contracts:extensions:coverage": "npx hardhat compile && NODE_OPTIONS='--max-old-space-size=6144' npx hardhat coverage --solcoverjs ./.solcover.extensions.js --temp build-coverage --testfiles './test/extensions/*'",
-    "test:contracts:e2e": "pnpm run run start:blockchain:client && npx hardhat test test-system/end-to-end.js --network development --bail",
+    "test:contracts:e2e": "pnpm run start:blockchain:client && npx hardhat test test-system/end-to-end.js --network development --bail",
     "test:contracts:e2e:coverage": "npx hardhat coverage --solcoverjs ./.solcover.e2e.js --testfiles 'test-system/end-to-end.js'",
     "test:security:slither": "slither . --solc-disable-warnings --exclude-low --exclude-informational --exclude-optimization --filter-paths 'lib|contracts/testHelpers|@openzeppelin'",
-    "pretest:contracts": "pnpm run run stop:blockchain:client",
-    "posttest:contracts": "pnpm run run stop:blockchain:client",
-    "posttest:contracts:extensions": "pnpm run run stop:blockchain:client",
-    "posttest:contracts:upgrade:parity": "pnpm run run clean:test:contracts | pnpm run stop:blockchain:client",
-    "posttest:contracts:upgrade:hardhat": "pnpm run run clean:test:contracts | pnpm run stop:blockchain:client",
-    "posttest:contracts:gasCosts": "pnpm run run stop:blockchain:client",
-    "posttest:contracts:patricia": "pnpm run run stop:blockchain:client",
-    "viz:bootstrap": "pnpm run run start:blockchain:client && HARDHAT_NETWORK=development npx hardhat run scripts/viz-bootstrap.js",
-    "kyc:bootstrap": "pnpm run run start:blockchain:client && HARDHAT_NETWORK=development npx hardhat run scripts/kyc-bootstrap.js"
+    "pretest:contracts": "pnpm run stop:blockchain:client",
+    "posttest:contracts": "pnpm run stop:blockchain:client",
+    "posttest:contracts:extensions": "pnpm run stop:blockchain:client",
+    "posttest:contracts:upgrade:parity": "pnpm run clean:test:contracts | pnpm run stop:blockchain:client",
+    "posttest:contracts:upgrade:hardhat": "pnpm run clean:test:contracts | pnpm run stop:blockchain:client",
+    "posttest:contracts:gasCosts": "pnpm run stop:blockchain:client",
+    "posttest:contracts:patricia": "pnpm run stop:blockchain:client",
+    "viz:bootstrap": "pnpm run start:blockchain:client && HARDHAT_NETWORK=development npx hardhat run scripts/viz-bootstrap.js",
+    "kyc:bootstrap": "pnpm run start:blockchain:client && HARDHAT_NETWORK=development npx hardhat run scripts/kyc-bootstrap.js"
   },
   "repository": {
     "type": "git",
