--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "test:reputation:2:anotherChain": "CHAIN_ID=101010101 pnpm run start:blockchain:client && MINING_CHAIN_ID=101010101 CHAIN_ID=101010101 npx hardhat test ./test/reputation-system/reputation-mining-client/* --network development",
     "test:reputation:1:coverage": "npx hardhat coverage --solcoverjs ./.solcover.reputation.1.js --temp build-coverage --testfiles './test/reputation-system/*.js'",
     "test:reputation:2:coverage": "npx hardhat coverage --solcoverjs ./.solcover.reputation.2.js --temp build-coverage --testfiles './test/reputation-system/reputation-mining-client/*'",
-    "test:reputation:1:anotherChain:coverage": "MINING_CHAIN_ID=101010101 CHAIN_ID=101010101 npx hardhat coverage --solcoverjs ./.solcover.anotherChain1.js --testfiles './test/reputation-system/*.js'",
-    "test:reputation:2:anotherChain:coverage": "MINING_CHAIN_ID=101010101 CHAIN_ID=101010101 npx hardhat coverage --solcoverjs ./.solcover.anotherChain2.js --testfiles './test/reputation-system/reputation-mining-client/*'",
+    "test:reputation:1:anotherChain:coverage": "MINING_CHAIN_ID=101010101 CHAIN_ID=101010101 npx hardhat coverage --solcoverjs ./.solcover.anotherChain1.js --temp build-coverage --testfiles './test/reputation-system/*.js'",
+    "test:reputation:2:anotherChain:coverage": "MINING_CHAIN_ID=101010101 CHAIN_ID=101010101 npx hardhat coverage --solcoverjs ./.solcover.anotherChain2.js --temp build-coverage --testfiles './test/reputation-system/reputation-mining-client/*'",
     "test:contracts": "pnpm run start:blockchain:client && npx hardhat test ./test/contracts-network/* ./test/packages/* --network development",
     "test:contracts:bridging:1": "CHAIN_ID_1=265669100 CHAIN_ID_2=265669101 pnpm run start:blockchain:client:both && HARDHAT_FOREIGN=false MINING_CHAIN_ID=265669100 npx hardhat test ./test/cross-chain/* --network development",
     "test:contracts:bridging:2": "CHAIN_ID_1=265669101 CHAIN_ID_2=265669100 pnpm run start:blockchain:client:both && HARDHAT_FOREIGN=true MINING_CHAIN_ID=265669100 CHAIN_ID=265669101 npx hardhat test ./test/cross-chain/* --network development",
@@ -119,6 +119,7 @@
     "ethers": "^5.6.8",
     "ethlint": "^1.2.5",
     "express": "^4.18.2",
+    "fastify": "^4.28.1",
     "find-in-files": "^0.5.0",
     "hardhat": "^2.22.5",
     "hardhat-contract-sizer": "^2.10.0",
