Install hardhat-tracer

--- a/package.json
+++ b/package.json
@@ -116,7 +116,9 @@
     "hardhat": "^2.22.6",
     "hardhat-contract-sizer": "^2.10.0",
     "hardhat-storage-layout-changes": "^0.1.2",
+    "hardhat-tracer": "^3.0.2",
     "husky": "^8.0.3",
+    "husky": "^8.0.1",
     "istanbul": "^0.4.5",
     "istanbul-combine": "^0.3.0",
     "mocha": "^10.6.0",
