--- a/packages/reputation-miner/package.json
+++ b/packages/reputation-miner/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "apicache": "^1.6.3",
+    "axios": "^1.7.3",
     "better-sqlite3": "^9.5.0",
     "bn.js": "^5.2.1",
     "ethers": "^5.6.9",
